[package]
name = "rusty-vxi11"
version = "0.1.0"
authors = ["samgomena <samgomena@gmail.com>"]
edition = "2018"

[[bin]]
name = "rust-vxi11"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xdr = { git = "https://github.com/samgomena/serde-xdr"}
tokio = { version = "*", features = ["full"] }
tokio-core = "0.1.9"
tokio-proto = "*"
tokio-service = "*"
nom = "^2.0"
rustc-serialize = "0.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_bytes = "*"
serde_derive = "*"
byteorder = "*"
futures = "0.1.14"
